# Interferometry-and-Phase-Unwrapping-Research

./: .gitignore  README.md  basic_1d_example.ipynb  basic_2d_example.ipynb  calculateTerrainHeight.m  downsample.asv  downsample.m  phi_mle.m  pyproject.toml  unwrap2D.m
Iterative Alternating Sequential (IAS)/: 2d_solver.ipynb  README.md  examples.ipynb  gotcha_test.ipynb
dev/: 1d_example_with_ias.ipynb  2d_tikhonov_cholesky.ipynb  2d_tikhonov_cholesky_ias.ipynb  basic_1d_example.ipynb  basic_2d_example.ipynb  faster_2d_with_cholesky.ipynb  ias_1d.ipynb  tikhonov_regularization.ipynb
dev/ghiglia/: demo.ipynb  demo2.ipynb  gpt.ipynb  gradient_operator.ipynb  neumann_grad.ipynb
examples/: 1d_mle_phase_unwrapping.ipynb  1d_phase_unwrapping.ipynb  2d_mle_phase_unwrapping.ipynb  basic_interferometry.ipynb  pcg_mle_phase_unwrapping.ipynb
src/phaseunwrapping/: __init__.py  cg.py  dct.py  mle.py  operators.py  util.py
