[build-system]
requires = ["setuptools>=59.2.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "phaseunwrapping"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
  { name="Henry Morris", email="henry.j.morris.25@dartmouth.edu" }
]
description = "Some implementations of phase unwrapping methods."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["phase unwrapping"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/phase-unwrapping"
"Bug Tracker" = "https://github.com/jlindbloom/phase-unwrapping/issues"
